<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">增长客</string>
    <string name="app_desc">增长客</string>
    <string name="pref_open">抢红包</string>
    <string name="pref_not_self">自己发的不抢</string>
    <string name="pref_delay">延时抢红包</string>
    <string name="pref_delay_time">延时时长</string>
    <string name="pref_whisper">私聊不抢</string>
    <string name="quick_open">快速拆包</string>
    <string name="receive_transfer">自动接收转账</string>
    <string name="pref_show_wechat_id">显示微信ID</string>
    <string name="delay_message">延迟0毫秒拆开红包</string>
    <string name="setting">设置</string>
    <string name="luckmoney_setting">红包设置</string>
    <string name="other_setting">设置</string>
    <string name="AntiRevoke_setting">防撤回设置</string>
    <string name="function_setting">增强功能</string>
    <string name="pref_enable_adblock">过滤朋友圈广告</string>
    <string name="pref_enable_autologin">电脑微信自动登录</string>
    <string name="pref_break_limit">突破9张图片限制</string>
    <string name="pref_enable_anti_revoke">消息防撤回</string>
    <string name="pref_enable_anti_sns_delete">朋友圈防删除</string>
    <string name="pref_show_icon">显示图标</string>
    <string name="repair">尝试修复插件</string>
    <string name="generate">生成本机配置</string>
    <string name="repair_done">修复完成，请重启微信</string>
    <string name="about">关于</string>
    <string name="author">作者</string>
    <string name="acknowledgements">致谢</string>
    <string name="wechat_donate">微信捐赠</string>
    <string name="alipay_donate">支付宝捐赠</string>
    <string name="not_contains">包含关键字不抢</string>
    <string name="not_contains_hit">请输入关键字, 以,分隔</string>
    <string name="black_list">包含微信ID不抢</string>
    <string name="black_list_hit">请输入微信ID, 以,分隔</string>
    <string name="generate_success">生成配置成功</string>
    <string name="generate_failed">生成配置失败</string>
    <string name="generating">正在生成配置…</string>
    <string name="send_message">发送消息</string>
    <string name="getWcdb">获取微信数据</string>
    <string name="add_friend">添加好友</string>
    <string name="send_message_hint">请输入微信号/手机号/QQ号</string>
    <string name="send_message_target_id">微信ID</string>
    <string name="send_message_content">信息内容</string>
    <string name="add_friend_hint">微信号/手机号/QQ号</string>
    <string name="init">初始化</string>
    <string name="hello_text">打招呼信息</string>
    <string name="get_app_list">获取所有已安装App信息</string>
    <string name="uninstall_XposedCheck">卸载XposedCheck</string>
    <string name="install_XposedCheck">安装XposedCheck</string>
    <string name="sns_text">朋友圈文本</string>
    <string name="send_sns">发送朋友圈</string>
    <string name="bind_divce">扫码绑定设备</string>
    <string name="sync_friend">同步好友</string>
    <string name="title_device_info">设备信息</string>
    <string name="title_sync_friend">同步好友</string>
</resources>
