<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/other_setting">
        <Preference
            android:key="generate"
            android:title="@string/generate" />

        <Preference
            android:key="get_wcdb"
            android:title="@string/getWcdb" />

        <Preference
            android:key="send_message"
            android:title="@string/send_message" />

        <Preference
            android:key="repair"
            android:title="@string/repair" />

        <Preference
            android:key="add_friend"
            android:title="@string/add_friend" />
    </PreferenceCategory>


    <!--<PreferenceCategory android:title="@string/about">-->
        <!--<Preference-->
            <!--android:key="author"-->
            <!--android:summary="gentcent"-->
            <!--android:title="@string/author" />-->
        <!--<Preference-->
            <!--android:key="author"-->
            <!--android:summary="veryyoung, Gh0u1L5, wuxiaosu"-->
            <!--android:title="@string/acknowledgements" />-->

    <!--</PreferenceCategory>-->

</PreferenceScreen>
